--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<body>
+    
 <header>ALURAFLIX</header>
 <h1>É OURO! REBECA ANDRADE BRILHA NA FINAL DO SOLO EM PARIS | OLIMPÍADAS 2024</h1> 
 <p>#rebecaandradeganhaouro</p>
+
+</body>
