--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
+<html>
+<head>
+    <link rel="stylesheet" href="styles.css"/>
+<title>ALURAFLIX</title>
+</head>
+
 <body>
     
 <header>ALURAFLIX</header>
+<div> 
 <h1>É OURO! REBECA ANDRADE BRILHA NA FINAL DO SOLO EM PARIS | OLIMPÍADAS 2024</h1> 
 <p>#rebecaandradeganhaouro</p>
-
+</div>
+<div>
+<iframe width="670" height="377" src="https://www.youtube.com/embed/YtkCv-9-c6Y" title="É OURO! REBECA ANDRADE BRILHA NA FINAL DO SOLO EM PARIS | OLIMPÍADAS 2024 | sportv" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
 </body>
+</html>
