--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang= "pt-br">
 <head>
     <link rel="stylesheet" href="styles.css"/>
 <title>ALURAFLIX</title>
@@ -7,6 +7,7 @@
 <body>
     
 <header>ALURAFLIX</header>
+<section>
 <div> 
 <h1>É OURO! REBECA ANDRADE BRILHA NA FINAL DO SOLO EM PARIS | OLIMPÍADAS 2024</h1> 
 <p>#rebecaandradeganhaouro</p>
@@ -14,5 +15,6 @@
 <div>
 <iframe width="670" height="377" src="https://www.youtube.com/embed/YtkCv-9-c6Y" title="É OURO! REBECA ANDRADE BRILHA NA FINAL DO SOLO EM PARIS | OLIMPÍADAS 2024 | sportv" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
+</section>
 </body>
 </html>
