--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 <header>ALURAFLIX</header>
 <section>
-<div> 
+<div class="chamada-texto"> 
 <h1>É OURO! REBECA ANDRADE BRILHA NA FINAL DO SOLO EM PARIS | OLIMPÍADAS 2024</h1> 
 <p>#rebecaandradeganhaouro</p>
 </div>
