--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h2>Olimpíadas</h2>
   <div>
       <a href="https://www.youtube.com/watch?v=17mhZNfxN_k">
-          <img src="
+          <img src="https://img.youtube.com/vi/17mhZNfxN_k/maxresdefault.jpg">
   </div>
 </section>
 
