--- a/index.html
+++ b/index.html
@@ -22,9 +22,19 @@
     
 <section>
   <h2>Olimpíadas</h2>
-  <div>
+  <div class="categoria-videos">
       <a href="https://www.youtube.com/watch?v=17mhZNfxN_k">
           <img src="https://img.youtube.com/vi/17mhZNfxN_k/maxresdefault.jpg">
+      </a>
+      <a href="https://www.youtube.com/watch?v=06imqa2hIMo">
+        <img src="https://img.youtube.com/vi/06imqa2hIMo/maxresdefault.jpg">
+      </a>
+      <a href="https://www.youtube.com/watch?v=ObWrme_rcA0">
+        <img src="https://img.youtube.com/vi/ObWrme_rcA0/maxresdefault.jpg">
+      </a>
+      <a href="https://www.youtube.com/watch?v=Lm3gJyGiVLc">
+        <img src="https://img.youtube.com/vi/Lm3gJyGiVLc/maxresdefault.jpg">
+      </a>
   </div>
 </section>
 
